feat:added image directory

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Beautiful Architecture</title>
 </head>
     <h1>Beautiful Architecture!</h1>
@@ -18,7 +19,7 @@
                     <a href="osaka.html">Osaka Castle</a>
                 </li>
                 <li>
-                    <a href="neuschwanstein.html">Neuschwanstein Castle</a>
+                    <a href="neuschwanstein.html">Neusch-wanstein Castle</a>
                 </li>
             </ul>
         </nav>
