feat added images

--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
                     <a href="neuschwanstein.html">Neusch-wanstein Castle</a>
                 </li>
             </ul>
+        
         </nav>
+        <section>
+            <figure>
+                <img src="assets/images/la Sagrada Famila.jpeg" alt=" an image of La Sagrada Famila">
+            </figure>
+        </section>
 <body>
     
 </body>
